srechallenge/src/cpx-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-server
  labels:
    app: cpx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpx-server
  template:
    metadata:
      labels:
        app: cpx-server
    spec:
      containers:
      - name: cpx-server
        image: __DRHOST__/cpx_server:latest
        command: [ "python3", "cpx_server.py", "8080" ]
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"
