srechallenge/src/cpx-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cpx-server
spec:
  selector:
    app: cpx-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
